--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,97 @@
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #FFF;
-  padding: 10px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+/* Navigation */
+nav img {
+  height: 70px;
+}
+nav ul li a {
+  text-transform: uppercase;
+  margin-left: 20px;
+  border: 1px solid transparent;
   
 }
 
-.logo {
-  display: flex;
-  align-items:center;
-  margin-left: 20px;
+nav ul li a:hover {
+  background-color: #495e57;
+  border-radius: 5px;
+  color:white !important;
+  border: 1px solid transparent;
+  transition: all 0.5s;
 }
 
-.logo img {
-  width: 70px;
-  height: 70px;
+/* Hero Section */
+.heroSection {
+  background-color: #495e57;
+  padding-bottom: 60px;
+  padding-top: 60px;
+ 
+}
+.heroSection-text h1{
+  font-size: 70px;
+}
+.heroSection-text h3 {
+  font-weight: lighter;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.heroSection-text p {
+  font-size: 17px;
+}
+.heroimg img {
+  height: 300px;
+  width: 320px;
+  border-radius: 10px;
+  
+}
+.heroSection button {
+  padding: 10px;
+  background-color: black;
+  margin-top: 20px;
+  color: white;
+  border-radius: 5px;
+  border: none;
 }
 
-ul {
-  display: flex;
-  list-style-type: none;
+/* Responsive */
+
+@media screen and (max-width: 767px) {
+ .heroSection img{
+  margin-top: 20px;
+  display: grid;
+  place-items: center;
+
+ }
+ 
 }
 
-ul li {
-  margin-right: 20px;
+/* Special items */
+
+.special-items{
+  background-color: #586E65;
+}
+.special-items h2{
+  padding: 20px;
+  font-size: 40px;
+  font-weight: bold;
+  
+
 }
 
-ul li a{
-  text-decoration: none;
+/* Card */
+
+ .card-title {
   color: black;
-  text-transform: uppercase;
-  margin-right: 10px;
+  font-family:initial !important;
+
 }
+
+.delivery-order{
+  font-weight: bold !important;
+  font-family: initial;
+}
+
