--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed&family=Ubuntu:ital@1&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
+  /* font-family: 'Roboto Condensed', sans-serif;
+font-family: 'Ubuntu', sans-serif; */
 }
 /* Navigation */
 nav img {
@@ -14,13 +17,12 @@ nav ul li a {
   text-transform: uppercase;
   margin-left: 20px;
   border: 1px solid transparent;
-  
 }
 
 nav ul li a:hover {
   background-color: #495e57;
   border-radius: 5px;
-  color:white !important;
+  color: white !important;
   border: 1px solid transparent;
   transition: all 0.5s;
 }
@@ -30,9 +32,8 @@ nav ul li a:hover {
   background-color: #495e57;
   padding-bottom: 60px;
   padding-top: 60px;
- 
 }
-.heroSection-text h1{
+.heroSection-text h1 {
   font-size: 70px;
 }
 .heroSection-text h3 {
@@ -46,7 +47,6 @@ nav ul li a:hover {
   height: 300px;
   width: 320px;
   border-radius: 10px;
-  
 }
 .heroSection button {
   padding: 10px;
@@ -60,38 +60,65 @@ nav ul li a:hover {
 /* Responsive */
 
 @media screen and (max-width: 767px) {
- .heroSection img{
-  margin-top: 20px;
-  display: grid;
-  place-items: center;
-
- }
- 
+  .heroSection img {
+    margin-top: 20px;
+    display: grid;
+    place-items: center;
+  }
 }
 
 /* Special items */
 
-.special-items{
-  background-color: #586E65;
+.special-items {
+  background-color: #586e65;
+  padding-bottom: 30px;
 }
-.special-items h2{
-  padding: 20px;
+.special-items h2 {
+  padding: 50px;
   font-size: 40px;
   font-weight: bold;
-  
-
 }
+
 
 /* Card */
 
- .card-title {
+.card-title {
   color: black;
-  font-family:initial !important;
-
+  font-family: initial !important;
 }
 
-.delivery-order{
+.delivery-order {
   font-weight: bold !important;
   font-family: initial;
 }
 
+/* About */
+.about-img img {
+  height: 300px;
+  width: 320px;
+  border-radius: 10px;
+ 
+}
+
+#about{
+  background-color: rgb(211, 205, 197);
+  padding: 10px;
+  padding:50px  0px 50px 80px;
+}
+#about h1{
+  font-size: 40px;
+}
+.About-text{
+  margin-top: 30px;
+}
+
+/* Footer */
+.footer img {
+  height: 200px;
+}
+
+.footer {
+  background-color: white;
+  padding-top: 20px;
+  color: black;
+}
