--- a/src/Bookings/Booking.css
+++ b/src/Bookings/Booking.css
@@ -1,79 +1,64 @@
-.App {
-    display: flex;
-    flex: 1;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  fieldset {
-    display: flex;
-    width: 480px;
-    padding: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    flex-direction: column;
-  }
-  
-  label {
-    margin-bottom: 8px;
-    font-size: 14px;
-  }
-  
-  sup {
-    color: red;
-    top: -2px;
-    font-size: 95%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-  }
-  
-  input,
-  select {
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    height: 32px;
-    padding: 0 8px;
-  }
-  
-  .Field {
-    position: relative;
-    padding-bottom: 24px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .FieldError {
-    position: absolute;
-    bottom: -6px;
-    color: red;
-    font-size: 12px;
-  }
-  
-  .Row {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  button {
-    padding: 12px;
-    width: 240px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    background-color: darkblue;
-    color: white;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: bold;
-    cursor: pointer;
-  }
-  
-  button:disabled,
-  button[disabled] {
-    border: 1px solid #999999;
-    background-color: #cccccc;
-    color: #666666;
-    cursor: not-allowed;
-  }
-  
+.bookings h2 {
+  padding: 1.875rem 0 1.875rem 0;
+  background-color: #495E57;
+  color: #FFFFFF;
+  text-align: center;
+}
+.form-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+form{
+  margin: 100px auto 1.875rem auto;
+  border: 1px solid;
+  padding: 40px;
+}
+
+form input,select{
+  width: 200%;
+}
+
+form button{
+  margin-top: 10px;
+  border: none;
+  padding: 10px;
+  background-color:#495E57 ;
+  color: white;
+  border-radius: 5px;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  cursor: pointer;
+  width: 50%;
+}
+
+.form-field p {
+  font-size: 0.9375rem;
+  color: red;
+}
+
+.bookings button:disabled,
+.bookings button[disabled] {
+  background-color: #EDEFEE;
+  border-color: #EDEFEE;
+  color: #ADAFAE;
+  cursor: not-allowed;
+}
+
+
+
+.confirmed-booking {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  min-height: 31.25rem;
+  padding: 1.875rem 0 1.875rem 0;
+  text-align: center;
+}
+
+
